[metadata]
name = libstored
version = file: version.txt
description = Embedded Debugger client for libstored's debug protocol
author = Jochem Rutgers
author_email = jochem.rutgers@demcon.com
url = https://github.com/DEMCON/libstored
long_description = file: README.md
long_description_content_type = text/markdown
license = MPLv2.0
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
	Intended Audience :: Developers
	Topic :: Software Development :: Debuggers
	Topic :: Software Development :: Embedded Systems

[options]
python_requires= >=3.6
packages = find:
install_requires =
	PySide6
	pyserial
	argparse
	pyzmq
	crcmod
	natsort
	heatshrink2
	matplotlib >= 3.5.0 # PySide6 support starts from 3.5.0
#	lognplot # optional

[options.entry_points]
console_scripts =
	libstored-cli = libstored.cli.__main__:main
	libstored-log = libstored.log.__main__:main
	libstored-wrapper-serial = libstored.wrapper.serial.__main__:main
	libstored-wrapper-stdio = libstored.wrapper.stdio.__main__:main
gui_scripts =
	libstored-gui = libstored.gui.__main__:main
	libstored-visu = libstored.visu.__main__:main
