# SPDX-FileCopyrightText: 2020-2024 Jochem Rutgers
#
# SPDX-License-Identifier: MPL-2.0

[metadata]
name = libstored
version = file: version.txt
description = Embedded Debugger client for libstored's debug protocol
author = Jochem Rutgers
author_email = jochem.rutgers@demcon.com
url = https://github.com/DEMCON/libstored
long_description = file: README.md
long_description_content_type = text/markdown
license = MPLv2.0
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: C++
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Topic :: Software Development :: Code Generators
	Topic :: Software Development :: Debuggers
	Topic :: Software Development :: Embedded Systems

[options]
python_requires= >=3.9
packages = find_namespace:
install_requires =
	PySide6
	pyserial
	argparse
	pyzmq
	crcmod
	natsort
	matplotlib >= 3.5.0 # PySide6 support starts from 3.5.0
	jinja2
	textx
	filelock
	platformdirs
	aiofiles
zip_safe = False
include_package_data = True

[options.packages.find]
exclude = libstored/data

[options.entry_points]
console_scripts =
	libstored-cli = libstored.cli.__main__:main
	libstored-log = libstored.log.__main__:main
	libstored-wrapper-serial = libstored.wrapper.serial.__main__:main
	libstored-wrapper-stdio = libstored.wrapper.stdio.__main__:main
	libstored-cmake = libstored.cmake.__main__:main
gui_scripts =
	libstored-gui = libstored.gui.__main__:main
	libstored-visu = libstored.visu.__main__:main
