# SPDX-FileCopyrightText: 2020-2025 Jochem Rutgers
#
# SPDX-License-Identifier: MPL-2.0

[metadata]
name = libstored
version = file: version.txt
description = Python generator and tools for libstored
author = Jochem Rutgers
author_email = jochem.rutgers@demcon.com
url = https://github.com/DEMCON/libstored
long_description = file: README.md
long_description_content_type = text/markdown
license = MPLv2.0
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: C++
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Topic :: Software Development :: Code Generators
	Topic :: Software Development :: Debuggers
	Topic :: Software Development :: Embedded Systems

[options]
python_requires= >=3.10
packages = find_namespace:
install_requires =
	aiofiles
	crcmod
	filelock
	jinja2
	matplotlib
	natsort
	platformdirs
	pyserial >= 3.1
	pyzmq
	textx
	'tornado >= 6.1; platform_system=="Windows"'
zip_safe = False
include_package_data = True

[options.packages.find]
exclude = libstored/data

[options.entry_points]
console_scripts =
	libstored-cli = libstored.cli.__main__:main
	libstored-log = libstored.log.__main__:main
	libstored-wrapper-serial = libstored.wrapper.serial.__main__:main
	libstored-wrapper-stdio = libstored.wrapper.stdio.__main__:main
	libstored-cmake = libstored.cmake.__main__:main
gui_scripts =
	libstored-gui = libstored.gui.__main__:main
